# SER_Project

./: .gitignore  README.md  SER.ipynb  api.py  file_tree.md  main.py  pyproject.toml  realtime_predict.py  requirements.txt  scaler.pkl  ser_code.py  setup.py
.ipynb_checkpoints/: SER-checkpoint.ipynb
ser_project/artifacts/: __init__.py  evaluation_results.json  scaler.pkl
ser_project/constants/: __init__.py
ser_project/logger/: __init__.py
ser_project/training/: data_ingestion.py  features.py  model_evaluator.py  train.py  training.py
ser_project/utils/: __init__.py
src/artifacts/: __init__.py
src/constants/: __init__.py
src/training/: data_ingestion.py  features.py  train.py
src/utils/: __init__.py
