[project]
name = "ser-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "keras>=3.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openai-whisper>=20250625",
    "opensmile>=2.6.0",
    "pandas>=3.0.0",
    "pymongo>=4.16.0",
    "python-multipart>=0.0.22",
    "resampy>=0.4.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "tensorflow>=2.16.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "uvicorn>=0.41.0",
]
